# Safe_Travels_API

./: .env.example  .gitignore  CLAUDE.md  MASTER_PLAN.md  PROGRESS.md  README.md  orchestration.md  requirements.txt
docs/: DATA_SOURCES.md  FEATURES.md  FILE_DOCUMENTATION.md  PRESENTATION.md  PROJECT_BRIEF.md  TEACHINGS.md  agent_zero.py  next_steps.md  orchestration_implementation.md  prompt_tips.md
docs/Pydantic_AI/: agent.py
docs/Pydantic_AI/openrouter_docs/: OpenRouter_Parameters.md  reasoning.md  reasoning_api.md
docs/Pydantic_AI/pydantic_ai_docs/: Pydantic_AI_Model_Settings.md  Pydantic_AI_OpenAI.md  Pydantic_AI_OpenAI_API.md  Pydantic_AI_Providers.md  ag-ui.md  ag-ui_api.md  agents.md  logfire.md  mcp_client.md  message_api.md  message_history.md  model_setup.md  openrouter.md  output.md  output_api.md  pydantic_ai_message_history_structure.md  pydantic_ai_openrouter.md  thinking.md
docs/Search_MCP/: pyproject.toml
docs/Search_MCP/docs/: MCP_Explained.md  fastmcp_v2.md  fastmcp_v2_full_documentation.md
docs/Search_MCP/src/Example_MCP/: __main__.py  config.py  functions.py  server.py
docs/crime_platform/: crimeo_docs.md
safetravels/app/: config.py  main.py
safetravels/app/api/: routes.py
safetravels/data/: dot_truck_stops.json  fbi_crime_data.json
safetravels/scripts/: load_data.py
src/: safe_travels.py
src/helper_functions/: crimeo.py  google_maps_final.py
src/tests/: google_maps_final_results.json  google_maps_test.py  google_maps_test_results.json  test_google_maps_final.py  test_phase3_agent.py  test_phase4_orchestrator.py
(+3 files in other folders)
