[project]
name = "Examle-MCP-Server"
version = "0.1.0"
description = "Example MCP Server for Web Search "
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.0.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "pydantic-settings>=2.0.0"
]

[[project.authors]]
name = "N of 1 AI"
email = "contact@example.com"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
Search_MCP = "Search_MCP.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/Search_MCP"]

[tool.hatch.build]
packages = ["src/Search_MCP"]